--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,32 +3,32 @@
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
-# trigger:
-# - master
-
-# pool:
-#   vmImage: ubuntu-latest
-
-# steps:
-# - task: UsePythonVersion@0
-#   inputs:
-#     versionSpec: '3.7'
-#   displayName: 'Use Python 3.7'
-
-# - script: |
-#     python -m pip install --upgrade pip
-#     pip install -r requirements.txt
-#   displayName: 'Install dependencies'
-
-# - script: |
-#     pip install pytest pytest-azurepipelines
-#     pytest
-#   displayName: 'pytest'
-
 trigger:
 - master
 
-extends:
-  template: simple-param.yml
-  parameters:
-      yesNo: false # set to a non-boolean value to have the build fail
+pool:
+  vmImage: ubuntu-latest
+
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.7'
+  displayName: 'Use Python 3.7'
+
+- script: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+  displayName: 'Install dependencies'
+
+- script: |
+    pip install pytest pytest-azurepipelines
+    pytest
+  displayName: 'pytest'
+
+# trigger:
+# - master
+
+# extends:
+#   template: simple-param.yml
+#   parameters:
+#       yesNo: false # set to a non-boolean value to have the build fail
