--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ parameters:
       - applicationServiceID: mcp-gke-internal-sandpit-blue
         workspace: mcp-gke-internal-sandpit-blue
         stack: gke
-        releaseVersion: $(major).$(minor)$(Rev:.r)
+        releaseVersion: $(major).$(minor)
         deploymentSteps:
         - tag
         approvalEnvName: mcp-sandpit
