--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -22,6 +22,9 @@ stages:
           #  - releaseVersion: 0.0.1
 
           steps:
+            - checkout: self
+              persistCredentials: true
+              
             - script: |
                 git config --global user.email "cggaldes@gmail.com"
                 git config --global user.name "Christopher Galdes"
