--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,9 @@ trigger:
 
 variables:
   major: 0
-  minor: 0
+  minor: 1
   patch: 20
-# name: $(major).$(minor)$(Rev:.r)
+name: $(major).$(minor)$(Rev:.r)
 
 pool:
   vmImage: ubuntu-latest
