--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -5,6 +5,8 @@
 parameters:
   - name: appServices
     type: object
+#   - name: environment
+#     type: string
 
 ###########################################################
 # Steps
@@ -17,6 +19,7 @@ stages:
       - ${{ each service in parameters.appServices }}:
         - job: SAY_HELLO_${{ upper(replace(replace(service.applicationServiceID,' ' ,'_'),'-','_')) }}
           displayName: Say Hello ${{ upper(replace(replace(service.applicationServiceID,' ' ,'_'),'-','_')) }}
+          environment: ${{ service.environment }}
 
           #variables:
           #  - releaseVersion: 0.0.1
