--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ parameters:
         deploymentSteps:
         - tag
         approvalEnvName: mcp-sandpit
-        environment: dev
+        environment: development
 
 #################################################
 # Job Definition
