--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -16,7 +16,7 @@ stages:
   - stage: 'GIT_TAG'
     displayName: Create a git tag for this version
     jobs:
-        environment: ${{ service.environment }}
+        environment: development
       - ${{ each service in parameters.appServices }}:
         - job: SAY_HELLO_${{ upper(replace(replace(service.applicationServiceID,' ' ,'_'),'-','_')) }}
           displayName: Say Hello ${{ upper(replace(replace(service.applicationServiceID,' ' ,'_'),'-','_')) }}
